--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "page": "^1.11.6"
     },
     "devDependencies": {
+        "@playwright/test": "1.36.2",
         "http-server": "0.12.3",
         "playwright-chromium": "1.9.2",
         "mocha": "8.3.2",
